src/styles/global.css
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Atkinson+Hyperlegible&family=Rammetto+One&family=Rubik&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Signika&display=swap");
@tailwind base;
@tailwind components;
@tailwind utilities;
/* Scrollbar */
* ::-webkit-scrollbar {
  @apply h-1 w-2;
}
* ::-webkit-scrollbar-track {
  @apply mx-1 rounded-md bg-transparent;
}
* ::-webkit-scrollbar-thumb {
  @apply cursor-pointer rounded-md bg-zinc-200 dark:bg-hover;
}
.info-button {
  @apply flex h-8 items-center gap-2 whitespace-nowrap rounded-full bg-gray-200 px-4 font-medium dark:bg-hover;
}
.noSelect {
  -webkit-tap-highlight-color: transparent;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}
.noSelect:focus {
  outline: none !important;
}

